Bug 141455: hang when selecting text and right-clicking on page. r=akkana, sr=alecf